tests/bugs/field_access_typecrash_303.sy
start :: fn {
    a := 1
    a.a
    a
}
// error: $Violating(Type::Int)
